--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="robots" content="all">
 
   <!-- Site Author -->
-  <meta name="author" content="Joe Bloggs">
+  <meta name="author" content="Liberale Männer">
 
   <!-- Atom Feed -->
   <link href="/minimal-jekyll-theme/feed.xml" type="application/atom+xml" rel="alternate" title="Minimal Theme Feed">
@@ -37,20 +37,20 @@
 
   <!-- SEO -->
   <!-- Begin Jekyll SEO tag v2.3.0 -->
-<title>Minimal Jekyll Theme | Minimal Theme</title>
+<title>Liberale Männer</title>
 <meta property="og:title" content="Minimal Jekyll Theme" />
-<meta name="author" content="Joe Bloggs" />
+<meta name="author" content="Liberale Männer" />
 <meta property="og:locale" content="en" />
-<meta name="description" content="Your awesome site" />
-<meta property="og:description" content="Your awesome site" />
+<meta name="description" content="Gleichberechtigung - auch für Männer" />
+<meta property="og:description" content="Liberale Männer" />
 <link rel="canonical" href="https://desiredpersona.github.io/minimal-jekyll-theme/" />
 <meta property="og:url" content="https://desiredpersona.github.io/minimal-jekyll-theme/" />
-<meta property="og:site_name" content="Minimal Theme" />
+<meta property="og:site_name" content="Liberale Männer" />
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:site" content="@JoeBloggs" />
-<meta name="twitter:creator" content="@joebloggs" />
+<meta name="twitter:site" content="@liberalemaenner" />
+<meta name="twitter:creator" content="@liberalemaenner" />
 <script type="application/ld+json">
-{"name":"Joe Bloggs","description":"Your awesome site","author":{"@type":"Person","name":"Joe Bloggs"},"@type":"WebSite","url":"https://desiredpersona.github.io/minimal-jekyll-theme/","publisher":null,"image":null,"headline":"Minimal Jekyll Theme","dateModified":null,"datePublished":null,"sameAs":["https://twitter.com/username","https://plus.google.com/u/0/+username","https://www.facebook.com/username"],"mainEntityOfPage":null,"@context":"http://schema.org"}</script>
+{"name":"Joe Bloggs","description":"Your awesome site","author":{"@type":"Person","name":"Liberale Männer"},"@type":"WebSite","url":"https://desiredpersona.github.io/minimal-jekyll-theme/","publisher":null,"image":null,"headline":"Minimal Jekyll Theme","dateModified":null,"datePublished":null,"sameAs":["https://twitter.com/username","https://plus.google.com/u/0/+username","https://www.facebook.com/username"],"mainEntityOfPage":null,"@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 </head>
