--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- SEO -->
   <!-- Begin Jekyll SEO tag v2.3.0 -->
 <title>Liberale Männer</title>
-<meta property="og:title" content="Minimal Jekyll Theme" />
+<meta property="og:title" content="Liberale Männer" />
 <meta name="author" content="Liberale Männer" />
 <meta property="og:locale" content="en" />
 <meta name="description" content="Gleichberechtigung - auch für Männer" />
@@ -50,7 +50,7 @@
 <meta name="twitter:site" content="@liberalemaenner" />
 <meta name="twitter:creator" content="@liberalemaenner" />
 <script type="application/ld+json">
-{"name":"Joe Bloggs","description":"Your awesome site","author":{"@type":"Person","name":"Liberale Männer"},"@type":"WebSite","url":"https://desiredpersona.github.io/minimal-jekyll-theme/","publisher":null,"image":null,"headline":"Minimal Jekyll Theme","dateModified":null,"datePublished":null,"sameAs":["https://twitter.com/username","https://plus.google.com/u/0/+username","https://www.facebook.com/username"],"mainEntityOfPage":null,"@context":"http://schema.org"}</script>
+{"name":"Liberale Männer","description":"Gleichberechtigung - auch für Männer","author":{"@type":"Person","name":"Liberale Männer"},"@type":"WebSite","url":"https://desiredpersona.github.io/minimal-jekyll-theme/","publisher":null,"image":null,"headline":"Minimal Jekyll Theme","dateModified":null,"datePublished":null,"sameAs":["https://twitter.com/username","https://plus.google.com/u/0/+username","https://www.facebook.com/username"],"mainEntityOfPage":null,"@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
 </head>
@@ -66,7 +66,7 @@
   
   <div class="flex-l justify-between items-center mw7 mw8-l w-100 center pt3 pb3 pl3 pr3-ns ph4-m">
 
-<a class="white hover-white dim link f2 f3-l fw4 mr3" href="https://desiredpersona.github.io/minimal-jekyll-theme/" title="Home">Minimal Theme</a>
+<a class="white hover-white dim link f2 f3-l fw4 mr3" href="https://desiredpersona.github.io/minimal-jekyll-theme/" title="Home">Liberale Männer</a>
 
 
   <div class="flex-l items-center mt3 mt0-l">
