--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <meta name="author" content="Liberale Männer">
 
   <!-- Atom Feed -->
-  <link href="/minimal-jekyll-theme/feed.xml" type="application/atom+xml" rel="alternate" title="Minimal Theme Feed">
+  <link href="/feed.xml" type="application/atom+xml" rel="alternate" title="Liberale Männer Feed">
   
   <!-- Stylesheet -->
-  <link rel="stylesheet" href="/minimal-jekyll-theme/assets/css/minimal.css">
+  <link rel="stylesheet" href="/assets/css/minimal.css">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/favicon.png">
